--- a/Final/ExportLatex.tex
+++ b/Final/ExportLatex.tex
@@ -1,5 +1,5 @@
 \usepackage[style=verbose-ibid,backend=bibtex]{biblatex}
-\addbibresource{Bibliography.bib}
+\addbibresource{lib.bib}
 \usepackage{ftnxtra}
 \usepackage{fnpos}
 \interfootnotelinepenalty=10000
